--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"displayName": "github-vscode-richpresence",
 	"description": "",
 	"publisher": "rubenkharel",
+	"icon": "img/logo.png",
 	"repository": "https://github.com/rubenkharel/github-vscode-rich-presence-extension",
-	"version": "1.1.3",
+	"version": "1.1.5",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -22,16 +23,16 @@
 				"title": "testGithubVScode"
 			}
 		],
-		"configuration":[
+		"configuration": [
 			{
 				"title": "GITHUB VSCODE RECH PREFERENCE",
 				"properties": {
-					"endpoint.OfSocketIoServer":{
+					"endpoint.OfSocketIoServer": {
 						"type": "string",
 						"default": "http://localhost:9998",
 						"description": "The endpoint of your socketIO server"
 					},
-					"speed.InSec":{
+					"speed.InSec": {
 						"type": "number",
 						"default": "10",
 						"description": "How fast you want your server to update your information? (in sec)"
